# wifiSensing

./: .gitignore  README.md  debug.txt  requirements.txt
data/old/: bjk_walk.csv  dks_walk.csv  eks_walk.csv
data/testdata10/: ap1.csv  ap2.csv
data/traindata/: gad_working.csv
firmware/_components/: csi_component.h  sockets_component.h
firmware/active_ap/: sdkconfig  sdkconfig.old
firmware/active_sta/: datalog_20250422_103343.csv  datalog_20250422_105020.csv  datalog_20250422_105432.csv  datalog_20250422_111522.csv  datalog_20250422_111647.csv  sdkconfig  sdkconfig.old
firmware/active_sta/main/: CMakeLists.txt  common.h  config.h  config_print.c  main.cc  nvs_utils.c  sd_utils.c  socket_transmitter.c
firmware/active_sta_py/: README.txt  active_sta.py  active_sta_win.py  empty4.csv  empty444.csv  empty5.csv  empty6.csv  empty8.csv  opendoor3.csv  output.csv  requirements.txt  sleep22.csv  sleep222.csv  sleep23.csv  sleep4422.csv  sleep444.csv  sleep44922.csv  work111.csv  work4.csv  working.csv  working2.csv
model/: human_identification_svc.pkl  human_precense_knn.pkl  human_precense_svc.pkl  human_presence_svc.pkl  pipe_final_knn.pkl  pipe_final_svm.pkl
old_firmware/_components/: csi_component.h
old_firmware/active_ap/: sdkconfig  sdkconfig.old
scripts/: csi_data.sh  evaluate_model.py  extract_annotations.py  preprocess_csi.py  pytorch_deep_learning_model.py  realtime_system_testing.py  sense_hat_head_visualization.py  sense_hat_realtime.py  train_model.py  utils.py  visualize_csi.py
scripts/tempfile/: empty1.csv  tempData.csv  tempData_testing.csv  (+4 more)
(+34 files in other folders)
