idf_component_register(
    SRCS 
        "main.cc"
        "config_print.c"
        "nvs_utils.c"
        "sd_utils.c"
        "socket_transmitter.c"
    INCLUDE_DIRS "."
    REQUIRES 
        freertos 
        nvs_flash 
        esp_wifi 
        esp_event 
        esp_netif 
        esp_http_client
        sdmmc
        driver
        esp_http_client
        esp_https_ota
        esp_https_server
        esp_serial_slave_link
        ulp
        mbedtls
        efuse
        app_update
        bootloader_support
        esp_ipc
        spi_flash
        pthread
        esp_gdbstub
        esp_system
        esp_rom
        hal
        vfs
        esp_eth
        tcpip_adapter
        lwip
        log
        heap
        soc
        esp_hw_support
        esp_ringbuf
        driver
        xtensa
        espcoredump
        perfmon
        esp_common
        esp_timer
        newlib
        cxx
        app_trace
        fatfs
        nghttp
        esp-tls
        tcp_transport
)